# scribe

./: .env.example  .gitignore  README.md  com.scribe.watcher.plist  pyproject.toml
src/scribe/: db.py  formatter.py  ledger.py  main.py  notes.py  summarizer.py  transcriber.py  watcher.py
tests/: test_db.py  test_formatter.py  test_ledger.py  test_notes.py  test_summarizer.py
